--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Motivation</title>
 </head>
 <body class='container center'>
+  <button type="button" id="sort">Sort By Author</button>
   <h1>My favorite quotes:</h1>
   <div>
     <ul id="quote-list">
