--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="src/index.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -29,6 +30,7 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
-  <script src="src/index.js"></script>
+  <div class="quotes-container">
+</div>
 </body>
 </html>
