--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </ul>
   </div>
   <hr>
-  <div>
+  <div id="form-div">
     <form id="new-quote-form">
       <div class="form-group">
         <label for="new-quote">New Quote</label>
